fixed spacing errors and non working functions

--- a/css/style.css
+++ b/css/style.css
@@ -8,9 +8,7 @@ padding-top: 400px;
 p {
   font-size: 5px
 }
-p {
-    font-size: 0.875em; /* 14px/16=0.875em */
-}
+
 body {
 background-color: lightcoral;
 }
